# cvec

./: CMakeLists.txt  Cargo.toml  README.md  appveyor.yml
libcvec-sys/: Cargo.toml  build.rs  wrapper.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
